add link_to path to all links and some style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,6 +28,18 @@ input{
 	font-weight: bold; 
 	letter-spacing:1px; 
 }
+.view-all-container{
+	color:#fff;
+	letter-spacing:1px;
+	text-align: center;
+	margin-top:10px !important; 
+ 
+ 	.view{
+		color:#00BCD4;
+
+ 	}
+
+}
 
 /*------------result page style------------------*/
 .result_wrapper{
