--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,8 @@
       <div class="row">
        			<div class="col-md-12">
        				<div class="search-container">
-       					<input type="text" name = "search">	<button class="search-btn">search</button>
+       					<input type="text" name = "search">
+       					<button class="search-btn">search</button>
        				</div>
        				<div class="view-all-container">
 					  find vendor here
