--- a/app/views/pages/result_page.html.erb
+++ b/app/views/pages/result_page.html.erb
@@ -2,8 +2,17 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="result_wrapper">
-				<%= @user.address %>
-				<%= @user.name %>
+			<% @vendor.each do |data| %>    
+			 <div class="col-sm-4">
+			 	<div class="box">
+			 		<ul>
+			 		   <li><span>VENDOR NAME:</span>&nbsp;<%= data.name %></li>
+			 		   <li><span>ADDRESS:</span>&nbsp;<%= data.address %> </li>
+			 		    <li><span>TEL NO:</span>&nbsp;<%= data.address %></li>
+			 		</ul>
+			 	</div>
+			  </div>
+           <% end %>
 			</div>
 		</div>
 	</div>
