forget add production environment config assets to true

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap';
 
 body{
-	  background-image: url(bg.jpg) no-repeat center center fixed;
+	background: url(bg.jpg) no-repeat center center fixed;
 	-webkit-background-size:cover;
 	-moz-background-siz:cover;
 	-o-background-size:cover;
