--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,18 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="result_wrapper">
+  <div class="control-group">
+      <div class="login-con">
+     <%= form_for(resource, :html => {:class => "form-signin"},  as: resource_name, url: session_path(resource_name)) do |f| %>
+     
+     <%= f.label :email, :class => "sr-only" %>
+     <%= f.email_field :email, autofocus: true, :class =>"form-control", :placeholder =>"Email Address" %>
 
-<h2>Sign up</h2>
+     <%= f.label :password ,:class => "sr-only" %>
+     <%= f.password_field :password, autocomplete: "off", :class =>"form-control", :placeholder =>"Password - minimum 8 characters" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <%= f.label :password_confirmation, :class => "sr-only" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", :class =>"form-control", :placeholder =>"repeat-password" %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
-      </div>
-    </div>
+     <%= f.submit "Sign up", :class =>"btn btn-lg btn-primary btn-block" %>
+      <% end %>
+      <%= render "devise/shared/links" %>
   </div>
 </div>
