--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,6 +100,12 @@ hr{
 }
 
 /*-----------------login style form------------ */
+
+.header-login{
+	margin-bottom: 20px;
+	color:#fff;
+}
+
 .checkbox{
 	margin-left:21px;
 	color:#fff; 
@@ -114,8 +120,17 @@ hr{
 
 .login-con{
 	padding:30px;
-	background:rgba(255,255,255,0.5);  
+	background:rgba(255,255,255,0.5); 
+
 }
+.link {
+ margin-top:10px; 
+  a{
+	color:#fff; 
+	margin-top:10px; 
+  }
+}
+
 
  @media(min-width:980px) {
 	.login-con{
@@ -132,4 +147,7 @@ hr{
 		margin-top:220px;
 	}
 }
+
+
+
 
