--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
   <div class="control-group">
       <div class="login-con">
+          <h4 class = "header-login">SIGN UP</h4>
      <%= form_for(resource, :html => {:class => "form-signin"},  as: resource_name, url: session_path(resource_name)) do |f| %>
      
      <%= f.label :email, :class => "sr-only" %>
