--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -136,7 +136,7 @@ hr{
 *, *:before, *:after {box-sizing:  border-box !important;}
 
 
-.row {
+.row1 {
  -moz-column-width: 25em;
  -webkit-column-width: 25em;
  -moz-column-gap: 1em;
@@ -144,7 +144,7 @@ hr{
   
 }
 
-.row > .col-md-4 {
+.row1 > .col-md-4 {
  display: inline-block;
  padding:  .33rem;
  width:  100%; 
