--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,14 @@
 @import 'bootstrap';
+@import "font-awesome";
 
 body{
+	/*
 	background: url(bg.jpg) no-repeat center center fixed;
 	-webkit-background-size:cover;
 	-moz-background-siz:cover;
 	-o-background-size:cover;
+	*/
+	background:#EEEEEE; 
 }
 
 /*---------------------assets style----------------------*/
@@ -13,17 +17,18 @@ body{
 	margin-top:320px;
 	text-align: center;
 }
-input{
+input[type="text"]{
     width:60%;
+    height:60px; 
     padding:10px; 
-    background:rgba(255,255,255,0.8); 
+    background:#CFD8DC; 
     border: none;
 }
 .search-btn{
 	border: none;
-	padding:10px 30px; 
+	padding:20px 30px; 
 	margin-left:-4px;
-	background:#43A047;
+	background:#455A64;
 	color:#fff;
 	font-weight: bold; 
 	letter-spacing:1px; 
@@ -35,10 +40,8 @@ input{
 	margin-top:10px !important; 
 
  	.view{
-		color:#00BCD4;
-
+		color:#66BB6A;
  	}
-
 }
 
 .form{
@@ -48,16 +51,24 @@ input{
 .box img{
 	width:100%;
     height:auto; 
+    border-top-left-radius: 7px;
+    border-top-right-radius:7px;
+
 }
+
+ 
  ul{
  	list-style: none;
  }
  li{
  	padding:5px; 
  	margin-left:-40px; 
+ 	color:#B0BEC5;
+ 	border-bottom: 1px solid #E0E0E0;
  }
 span{
 	font-weight:bold; 
+	color:#90A4AE; 
 }
 
 /*------------result page style------------------*/
@@ -86,14 +97,15 @@ hr{
 
 /* header menu style*/
 .navbar-fixed-top{
-	background:rgba(0,0,0,0.4);
+	background:rgba(0,0,0,0.8);
+	height:120px; 
 	border:1px solid #000; 
 }
 .nav {
 
 	li a{
 		margin:8px;
-		color:#4DB6AC !important;
+		color:#fff !important;
 		font-weight:bold; 
 
 	}
@@ -120,7 +132,7 @@ hr{
 
 .login-con{
 	padding:30px;
-	background:rgba(255,255,255,0.5); 
+	background:#455A64; 
 
 }
 .link {
