add autopopulate  google map api for address input text

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,45 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script>
+function initialize()
+    {
+        var input = document.getElementById('vendor_address');
+        var autocomplete = new google.maps.places.Autocomplete(
+                /** @type {HTMLInputElement} */(input),
+                {
+                    types: ['geocode'],
+                });
+        google.maps.event.addListener(autocomplete, 'place_changed', function() {
+            var place = autocomplete.getPlace();
+            if (!place.geometry) {
+                return;
+            }
+            //document.getElementById('fLat').value = place.geometry.location.lat();
+            //document.getElementById('fLong').value = place.geometry.location.lng();
+
+            var address = '';
+            if (place.address_components)
+            {
+                address = [
+                    (place.address_components[0] && place.address_components[0].short_name || ''),
+                    (place.address_components[1] && place.address_components[1].short_name || ''),
+                    (place.address_components[2] && place.address_components[2].short_name || '')
+                ].join(' ');
+            }
+            LoadEventCategory();
+            LoadYelpData();
+        });
+    }
+
+    google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+
+
 </head>
 <body>
     <div class="container">
