--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,13 @@ body{
 	text-align: center;
 }
 input[type="text"]{
+    width:100%;
+    height:60px; 
+    padding:10px; 
+    background:#CFD8DC; 
+    border: none;
+}
+input[type="text"].search_input{
     width:60%;
     height:60px; 
     padding:10px; 
@@ -143,6 +150,26 @@ hr{
   }
 }
 
+/*------------------upload style -----*/
+
+
+.fileUpload {
+	position: relative;
+	overflow: hidden;
+	margin: 10px;
+}
+.fileUpload input.upload {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
 /*--------------------like masonry style ------------------*/
 
 *, *:before, *:after {box-sizing:  border-box !important;}
@@ -187,5 +214,7 @@ hr{
 }
 
 
-
+  #target {
+        width: 345px;
+      }
 
