--- a/app/views/admin_page/vendor_list.html.erb
+++ b/app/views/admin_page/vendor_list.html.erb
@@ -13,11 +13,11 @@
                       <tbody>
                       <% @vendor.each do |data| %>
                       <tr>       		 		  
-			 		   <td><%= data.name %></td>
-			 		   <td><%= data.address %> </td>
-			 		   <td><%= data.telno %></td>
-			 		   <td><%= data.type %></td>
-			 		   <td><%= link_to 'Destroy',@vendors, :method => :delete, :remote=>true, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %></td>
+          			 		   <td><%= data.name %></td>
+          			 		   <td><%= data.address %> </td>
+          			 		   <td><%= data.telno %></td>
+          			 		   <td><%= data.type %></td>
+          			 		   <td><%= link_to 'Destroy',{:action=>'destroy',:id => data.id}, method: :delete, :class=>'btn' %></td>
                       </tr>    
 			          <% end %> 	
                    </tbody> 
