--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,6 +65,7 @@ function initialize()
             <%if user_signed_in?%>
             <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
             <%else%>
+            <li><%= link_to "Login as Facebook", user_omniauth_authorize_path(:facebook) %></li>
             <li><%= link_to 'Log in', user_session_path%></li>
             <li><%= link_to 'Sign up', new_user_registration_path%></li>
           </ul>
