--- a/app/views/admin_page/vendor_list.html.erb
+++ b/app/views/admin_page/vendor_list.html.erb
@@ -1,30 +1,30 @@
 <div class="container bg">
     <div class="result_wrapper ">
-       <table class="table">
+    <table class="table">
             <thead>
               <tr>
-                 <th><span>VENDOR NAME:</span></th>
-       		 		   <th><span><i class="fa fa-map-marker"></i>&nbsp;&nbsp;ADDRESS:</span></th>
-       		 		   <th><span><i class="fa fa-phone"></i>&nbsp;&nbsp;TEL NO:</span></th>
-       		 		   <th><span><i class="fa fa-cart-plus"></i>&nbsp;&nbsp;PRODUCTS:</span></th>
-       		 		    <th><span><i class="fa fa-cart-plus"></i>&nbsp;&nbsp;STATUS</span></th>	
-                  <th><span><i class="fa fa-cart-plus"></i>&nbsp;&nbsp;ACTION</span></th>   		
+               <th><span>VENDOR NAME:</span></th>
+     		 		   <th><span><i class="fa fa-map-marker"></i>&nbsp;&nbsp;ADDRESS:</span></th>
+     		 		   <th><span><i class="fa fa-phone"></i>&nbsp;&nbsp;TEL NO:</span></th>
+     		 		   <th><span><i class="fa fa-cart-plus"></i>&nbsp;&nbsp;PRODUCTS:</span></th>
+     		 		    <th><span><i class="fa fa-cart-plus"></i>&nbsp;&nbsp;STATUS</span></th>	
+                <th><span><i class="fa fa-cart-plus"></i>&nbsp;&nbsp;ACTION</span></th>   		
               </tr>
-           </thead>
-        
-        <tbody>
+              </thead>
+              <tbody>
+     
           <% @vendor.each do |data| %>
             <tr>       		 		  
 			 		   <td><%= data.name %></td>
 			 		   <td><%= data.address %> </td>
 			 		   <td><%= data.telno %></td>
 			 		   <td><%= data.type %></td>
-             <td><%= link_to 'approved',{:controller=>'admin_page', :action=>'update', :id =>data.id} %></td>
+             <td><%= link_to 'approved',{:action=>'update', :id =>data.id}, method: :put %></td>
 			 		   <td><%= link_to 'Destroy',{:action=>'destroy', :id =>data.id}, method: :delete %></td>
             </tr>    
-           <% end %> 
-        </tbody> 
-     </table>
-	 </div>
-</div>
+        <% end %> 
+           </tbody> 
+     	    </table>
+		</div>
+	</div>
 
