--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -72,6 +72,7 @@ function initialize()
           <% end%>
         </div><!--/.nav-collapse -->
       </div>
+      Given URL is not allowed by the Application configuration: One or more of the given URLs is not allowed by the App's settings. It must match the Website URL or Canvas URL, or the domain must be a subdomain of one of the App's domains.
     </nav>
   
       
