--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,8 +63,9 @@ function initialize()
     
           <ul class="nav  navbar-nav navbar-right">
             <%if user_signed_in?%>
-            <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "Sign out", users_sign_out_path, :method => :delete %></li>
             <%else%>
+            <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
             <li><%= link_to 'Log in', user_session_path%></li>
             <li><%= link_to 'Sign up', new_user_registration_path%></li>
           </ul>
